Start using C++17 https://bugs.webkit.org/show_bug.cgi?id=197131

.:

Reviewed by Darin Adler.

* Source/cmake/OptionsMSVC.cmake:
* Source/cmake/WebKitCompilerFlags.cmake:

Source/bmalloc:

Reviewed by Darin Adler.

* Configurations/Base.xcconfig:

Source/JavaScriptCore:

Reviewed by Darin Alder.

* Configurations/Base.xcconfig:

Source/ThirdParty:

Reviewed by Darin Adler.

* gtest/xcode/Config/General.xcconfig:

Source/ThirdParty/ANGLE:

Reviewed by Darin Adler.

* Configurations/Base.xcconfig:

Source/ThirdParty/libwebrtc:

Reviewed by Darin Adler.

* Configurations/Base.xcconfig:

Source/WebCore:

Reviewed by Darin Adler.

* Configurations/Base.xcconfig:
* DerivedSources.make:

Source/WebCore/PAL:

Reviewed by Darin Adler.

* Configurations/Base.xcconfig:

Source/WebInspectorUI:

Reviewed by Darin Adler.

* Configurations/Base.xcconfig:

Source/WebKit:

Reviewed by Darin Adler.

* Configurations/Base.xcconfig:
* DerivedSources.make:

Source/WebKitLegacy/mac:

Reviewed by Darin Adler.

* Configurations/Base.xcconfig:

Source/WTF:

Reviewed by Darin Adler.

* Configurations/Base.xcconfig:
* wtf/CMakeLists.txt:
* wtf/Variant.h:
(WTF::switchOn):

Tools:

Reviewed by Darin Adler.

* DumpRenderTree/mac/Configurations/Base.xcconfig:
* MiniBrowser/Configurations/Base.xcconfig:
* MobileMiniBrowser/Configurations/Base.xcconfig:
* TestWebKitAPI/Configurations/Base.xcconfig:
* WebKitTestRunner/Configurations/Base.xcconfig:



Canonical link: https://commits.webkit.org/211493@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@244653 268f45cc-cd09-0410-ab3c-d52691b4dbfc